--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.4.9",
     "axios": "^0.26.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.6.5",
+    "css-loader": "^6.7.1",
     "firebase": "^7.14.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
@@ -26,6 +28,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.57.0",
+    "stylus-loader": "^6.2.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
