--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.6.5",
     "css-loader": "^6.7.1",
     "firebase": "^7.14.1",
+    "swiper": "^8.0.7",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^3.0.6",
     "vue-spinner": "^1.0.3",
     "vuex": "^3.1.0"
