--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@vue/composition-api": "^1.4.9",
+    "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.6.5",
@@ -19,6 +20,7 @@
     "firebase": "^7.14.1",
     "swiper": "^8.0.7",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.6.2",
     "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^3.0.6",
     "vue-spinner": "^1.0.3",
